# DuckCode-Modeling

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  datalex  mkdocs.yml  pyproject.toml  requirements.txt  start-dev.sh
.duckcode/custom-prompts/: README.md  data-apis.md  data-security.md  data-standards.md  data-testing.md  model-documentation.md  platform-dba-run-plan.md  warehouse-schema.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/datalex/: action.yml
.github/workflows/: api-server-tests.yml  datalex.yml  docs.yml  manifest-spec-validate.yml  model-quality.yml  publish.yml
Skills/: conceptual-business-modeling.md  dbt-naming-conventions.md  dbt-test-coverage.md  description-writing.md  governance-and-validation.md  relationship-rules.md  validation-fix-recipes.md
actions/datalex-gate/: README.md  action.yml
ci-templates/: bitbucket-pipelines.yml  github-actions.yml  gitlab-ci.yml  pr-comment-bot.yml
demo/: README.md  demo.tape
docs/: ai-agentic-modeling.md  api-contracts.md  architecture.md  backup-restore-runbook.md  cli.md  datalex-and-dql.md  datalex-layout.md  end-to-end-modeling-dictionary.md  getting-started.md  governance-policy-spec.md  index.md  mesh-interfaces.md  observability-slos.md  tutorial-dbt-sync.md  yaml-spec-v1.md  yaml-spec-v2.md
docs/archive/: README.md  end-to-end-modeling-dictionary.md  governance-policy-spec.md  yaml-spec-v1.md  yaml-spec-v2.md
docs/launch/: README.md  custom-domains.md  demo-script.md
docs/launch/posts/: dbt-slack.md  hacker-news.md  linkedin.md  reddit-dataengineering.md  twitter-thread.md
docs/manifest-spec/: CHANGELOG.md  index.md  interop.md  versioning.md
docs/manifest-spec/examples/datalex/: minimal.manifest.json
docs/manifest-spec/examples/dql/: minimal.manifest.json
docs/manifest-spec/v1/: datalex-manifest.schema.json  dql-manifest.schema.json
docs/rfcs/: 0000-template.md
docs/tutorials/: ci-readiness-gate.md  datalex-plus-dql-end-to-end.md  import-existing-dbt.md  jaffle-shop-walkthrough.md  policy-packs.md  warehouse-pull.md
examples/jaffle_shop_demo/: .gitignore  README.md  dbt_project.yml  profiles.yml  setup.py
model-examples/: 00-retail-ops-showcase.model.README.md  00-retail-ops-showcase.model.yaml  README.md  enterprise-dwh.model.README.md  new.model.yaml  starter-commerce.model.README.md  starter-commerce.model.yaml
model-examples/end-to-end-dictionary/: README.md  commerce_reporting.model.yaml  commerce_transform.model.yaml  source_sales_raw.model.yaml
model-examples/enterprise-modeling-foundation/: README.md  datalex.yaml
model-examples/enterprise-modeling-foundation/DataLex/Diagrams/Physical/sales/postgres/: physical_postgres_sales.diagram.yaml
model-examples/enterprise-modeling-foundation/DataLex/sales/Conceptual/: conceptual_sales.diagram.yaml
model-examples/enterprise-modeling-foundation/DataLex/sales/Logical/: logical_sales.diagram.yaml
model-examples/enterprise-modeling-foundation/DataLex/sales/Physical/postgres/: physical_postgres_sales.diagram.yaml
model-examples/enterprise-modeling-foundation/data_types/: email.yaml  identifier.yaml  money.yaml
model-examples/enterprise-modeling-foundation/datalex/diagrams/: conceptual_sales.diagram.yaml  logical_sales.diagram.yaml  physical_postgres_sales.diagram.yaml
model-examples/enterprise-modeling-foundation/models/conceptual/: customer.yaml  order.yaml
model-examples/enterprise-modeling-foundation/models/logical/: customer.yaml  order.yaml
model-examples/enterprise-modeling-foundation/models/physical/postgres/: dim_customer.yaml  fct_order.yaml
model-examples/enterprise-modeling-foundation/relationships/: customer_places_order.yaml  order_customer_fk.yaml
model-examples/enterprise-modeling-foundation/semantic/: customer_order_metrics.yaml
model-examples/multi-model-demo/: README.md  customers.model.README.md  orders.model.README.md  products.model.README.md
model-examples/real-scenarios/: README.md  fintech-risk-baseline.model.README.md  fintech-risk-baseline.model.yaml  fintech-risk-change.model.README.md  fintech-risk-change.model.yaml  retail-analytics-baseline.model.README.md  retail-analytics-baseline.model.yaml  retail-analytics-change.model.README.md  retail-analytics-change.model.yaml
policies/: default.policy.yaml  end_to_end_dictionary.policy.yaml  strict.policy.yaml
schemas/: model.schema.json  policy.schema.json
schemas/datalex/: common.schema.json  domain.schema.json  policy.schema.json  project.schema.json  source.schema.json
scripts/: update.sh
tests/: test_cli_dx.py  test_connectors.py  test_docs_generation.py  test_draft_manifest_loader.py  test_draft_providers.py  test_importers_v2.py  test_integrations.py  test_modeling_v3.py  test_multi_model.py  test_mvp.py  test_performance.py  test_phase5_web_ui.py  test_policy_engine_v2.py  test_real_scenarios.py  test_schema_v2.py  updated-commerce.model.yaml
tests/datalex/: test_agents.py  test_catalog_exporters.py  test_dbt_integration.py  test_dbt_sync.py  test_doc_blocks.py  test_loader_and_diff.py  test_mesh.py  test_non_model_resources.py  test_osi_export.py  test_packages.py  test_readiness_gate.py  test_scale_perf.py
tests/fixtures/: sample_schema.dbml  sample_schema.sql
tests/fixtures/large_synth/: generate.py
tests/policies/: fail.policy.yaml  pass.policy.yaml  test_custom_rules.py
tests/round_trip/: test_round_trip.py
tests/round_trip/postgres/fixtures/: datalex.yaml
tests/round_trip/postgres/fixtures/models/physical/postgres/: customer.yaml  order.yaml
tests/round_trip/postgres/golden/: expected.sql
tests/round_trip/snowflake/fixtures/: datalex.yaml
tests/round_trip/snowflake/fixtures/models/physical/snowflake/: customer.yaml  order.yaml
tests/round_trip/snowflake/golden/: expected.sql
tests/scenarios/: base.model.yaml  breaking.model.yaml  invalid.model.yaml  non_breaking.model.yaml
